--- a/config.yml
+++ b/config.yml
@@ -11,6 +11,48 @@ buildExpired: false
 
 # googleAnalytics: UA-123-45
 
+DefaultContentLanguage: "en"
+DefaultContentLanguageInSubdir: true
+languages:
+  en:
+    contentDir: "content/en" #English
+    weight: 1
+    languageName: "English"
+    params:
+      introTitle: "Hey! I'm Katheryn Fox"
+      introSubtitle: "26 y/o junior developer who enjoys social card games, blogging and painting"
+      introPhoto: "/picture.jpg"
+      logo: "/blist-logo.png"
+    menu:
+      main:
+        -
+          name: "Blog"
+          url: "blog"
+          weight: 1
+        -
+          name: "About"
+          url: "page/about/"
+          weight: 2
+        -
+          name: "Tags"
+          url: "tags"
+          weight: 3
+        -
+          name: "Top Post"
+          url: "/en/blog/emoji-support/"
+          weight: 4
+
+menu:
+  main:
+    name: "About"
+    url: "/about"
+
+build:
+  writeStats: true
+
+outputs:
+  home: ["HTML", "RSS", "JSON"]
+
 minify:
   disableXML: true
   minifyOutput: true
