--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Copy package.json and package-lock.json
       run: cp themes/blist/package*.json .
 
+    -name: copy site.css
+     run: cp assets/css/site.css themes/blist/assets/css/site.css
+
     - name: Setup npm
       uses: actions/setup-node@v3
       with:
