--- a/config.yml
+++ b/config.yml
@@ -34,13 +34,13 @@ languages:
           url: "page/about/"
           weight: 2
         -
-          name: "Tags"
-          url: "tags"
-          weight: 3
+         name: "Tags"
+         url: "tags"
+         weight: 3
         -
-          name: "Top Post"
-          url: "/en/blog/emoji-support/"
-          weight: 4
+#          name: "Top Post"
+#          url: "/en/blog/emoji-support/"
+#          weight: 4
 
 menu:
   main:
