--- a/config.yml
+++ b/config.yml
@@ -19,8 +19,8 @@ languages:
     weight: 1
     languageName: "English"
     params:
-      introTitle: "Greko"
-      introSubtitle: "Greko (grekański, grecko-kalabryjski) to język używany w południowej Kalabrii. 
+      introTitle: "Po co nam greko?"
+      introSubtitle: "Greko (grekański, grecko-kalabryjski) to język z południowej Kalabrii. 
       
       W historii greko i mówiącej nim społeczności splata się wiele wątków, których znaczenie wykracza poza granice Kalabrii. Refleksja nad kulturą grekańską skłania do zadania pytania o wartość tradycji skonfrontowanej z obietnicami, jakie roztaczają hasła nowoczesności i postępu. Historia Grekan może nas także przestrzec przed spustoszeniem i stratami, które mogą zasiać z jednej strony źle rozumiana modernizacja, a z drugiej bezrefleksyjna nostalgia za przeszłością. W końcu, rozmowa o greko to wzięcie strony słabszych: pozwala zawiesić neoliberalną logikę zysku, zgodnie z którą warto inwestować czas i wysiłek w poznawanie tylko tych języków i kultur, które szybko przełożą się na łatwe do zmierzenia korzyści."
       introPhoto: "/picture.jpg"
