--- a/config.yml
+++ b/config.yml
@@ -33,7 +33,7 @@ languages:
           weight: 1
         -
           name: "O stronie"
-          url: "/page/about/"
+          url: "/about/"
           weight: 2
         -
          name: "Tags"
