--- a/config.yml
+++ b/config.yml
@@ -35,10 +35,10 @@ languages:
           name: "O stronie"
           url: "/about/"
           weight: 2
-#        -
-#         name: "Tags"
-#         url: "tags"
-#         weight: 3
+        -
+         name: "Bibliografia"
+         url: "tags"
+         weight: 3
 #        -
 #          name: "Top Post"
 #          url: "/en/blog/emoji-support/"
