--- a/config.yml
+++ b/config.yml
@@ -66,7 +66,7 @@ params:
   author: Ewa Janion
   # author: ["Me", "You"] # multiple authors
   ascentColor: bg-gray-100
-  copyright: Strona powstała w ramach projektu finansowanego przez Unię Europejską w programie Horyzont 2020 (Grant Marie Skłodowska-Curie nr 778384), współfinansowanego ze środków na naukę w latach 2018-2023 przyznanych na realizację  projektu międzynarodowego 3928/H2020/2018/2. 
+  copyright: Strona powstała w ramach projektu finansowanego przez Unię Europejską w programie Horyzont 2020 (Grant Marie Skłodowska-Curie nr 778384), współfinansowana ze środków na naukę w latach 2018-2023 przyznanych na realizację  projektu międzynarodowego 3928/H2020/2018/2. 
 
 
   hideMeta: true
